--- a/src/assets/css/superlist.css
+++ b/src/assets/css/superlist.css
@@ -10686,7 +10686,7 @@ ol li {
   height: 100%; }
 
 .main-inner {
-  padding: 80px 0px; }
+  padding: 80px 0 0 0px; }
 
 .box-icon {
   border: 2px solid rgba(255, 255, 255, 0.4);
@@ -10789,3 +10789,17 @@ ol li {
       font-size: 13px;
       font-weight: 400;
       line-height: 24px; } }
+
+.home-bg {    
+    background-image: url("../img/tmp/pic4.png");
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;    
+}
